--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,10 @@ charset-normalizer==2.1.1
     # via requests
 click==8.1.3
     # via pip-tools
+gitdb==4.0.9
+    # via gitpython
+gitpython==3.1.27
+    # via -r requirements.in
 idna==3.4
     # via requests
 isort==5.10.1
@@ -28,16 +32,22 @@ psycopg2-binary==2.9.3
     # via -r requirements.in
 pyparsing==3.0.9
     # via packaging
+python-slugify==6.1.2
+    # via -r requirements.in
 pytz==2022.2.1
     # via trino
 requests==2.28.1
     # via trino
+smmap==5.0.0
+    # via gitdb
 sqlalchemy==1.4.41
     # via
     #   -r requirements.in
     #   trino
 tenacity==8.1.0
     # via plotly
+text-unidecode==1.3
+    # via python-slugify
 tomli==2.0.1
     # via
     #   build
