--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,12 @@ charset-normalizer==2.1.1
     # via requests
 click==8.1.3
     # via pip-tools
+deprecation==2.1.0
+    # via testcontainers
+docker==6.0.0
+    # via testcontainers
+flake8==5.0.4
+    # via -r requirements.in
 gitdb==4.0.9
     # via gitpython
 gitpython==3.1.27
@@ -20,8 +26,13 @@ idna==3.4
     # via requests
 isort==5.10.1
     # via -r requirements.in
+mccabe==0.7.0
+    # via flake8
 packaging==21.3
-    # via build
+    # via
+    #   build
+    #   deprecation
+    #   docker
 pep517==0.13.0
     # via build
 pip-tools==6.8.0
@@ -29,7 +40,13 @@ pip-tools==6.8.0
 plotly==5.10.0
     # via -r requirements.in
 psycopg2-binary==2.9.3
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   testcontainers
+pycodestyle==2.9.1
+    # via flake8
+pyflakes==2.5.0
+    # via flake8
 pyparsing==3.0.9
     # via packaging
 python-slugify==6.1.2
@@ -37,15 +54,20 @@ python-slugify==6.1.2
 pytz==2022.2.1
     # via trino
 requests==2.28.1
-    # via trino
+    # via
+    #   docker
+    #   trino
 smmap==5.0.0
     # via gitdb
 sqlalchemy==1.4.41
     # via
     #   -r requirements.in
+    #   testcontainers
     #   trino
 tenacity==8.1.0
     # via plotly
+testcontainers[postgresql]==3.7.0
+    # via -r requirements.in
 text-unidecode==1.3
     # via python-slugify
 tomli==2.0.1
@@ -55,9 +77,15 @@ tomli==2.0.1
 trino[sqlalchemy]==0.316.0
     # via -r requirements.in
 urllib3==1.26.12
-    # via requests
+    # via
+    #   docker
+    #   requests
+websocket-client==1.4.1
+    # via docker
 wheel==0.37.1
     # via pip-tools
+wrapt==1.14.1
+    # via testcontainers
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
