Save artifacts in failed test CI runs

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,3 +24,8 @@ jobs:
       - name: Test
         run: |
           ./report.py -t
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: test results
+          path: testdata/*.html
