After release, push to the correct default branch

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -69,4 +69,4 @@ jobs:
         git diff
         git commit -a -m "Prepare for next development iteration"
         git log
-        git push --tags origin master
+        git push --tags origin main
