--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #
 build==0.8.0
     # via pip-tools
-certifi==2022.9.14
+certifi==2022.9.24
     # via requests
 charset-normalizer==2.1.1
     # via requests
@@ -22,12 +22,18 @@ gitdb==4.0.9
     # via gitpython
 gitpython==3.1.27
     # via -r requirements.in
+greenlet==1.1.3
+    # via sqlalchemy
 idna==3.4
     # via requests
 isort==5.10.1
     # via -r requirements.in
 mccabe==0.7.0
     # via flake8
+jinja2==3.1.2
+    # via -r requirements.in
+markupsafe==2.1.1
+    # via jinja2
 packaging==21.3
     # via
     #   build
