--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,8 +33,7 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     - name: Log in to the Container registry
-      # locked to 2 commits after https://github.com/docker/login-action/releases/tag/v2.0.0
-      uses: docker/login-action@d398f07826957cd0a18ea1b059cf1207835e60bc
+      uses: docker/login-action@v2
       with:
         registry: ${{ env.registry }}
         username: ${{ secrets.ENG_AWS_ACCESS_KEY_ID }}
