--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,8 +14,7 @@ jobs:
       contents: write
       packages: write
     env:
-      registry: 888469412714.dkr.ecr.us-east-2.amazonaws.com
-      repository: 888469412714.dkr.ecr.us-east-2.amazonaws.com/benchmark-reports
+      repository: starburstdata/benchmark-reports
     steps:
     - uses: actions/checkout@v3
       with:
@@ -35,9 +34,8 @@ jobs:
     - name: Log in to the Container registry
       uses: docker/login-action@v2
       with:
-        registry: ${{ env.registry }}
-        username: ${{ secrets.ENG_AWS_ACCESS_KEY_ID }}
-        password: ${{ secrets.ENG_AWS_SECRET_ACCESS_KEY }}
+        username: ${{ secrets.DOCKERHUBUSERNAME }}
+        password: ${{ secrets.DOCKERHUBPASSWORD }}
 
     - name: Set release version
       run: |
