--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@
 #
 #    pip-compile requirements.in
 #
-build==0.9.0
+build==0.10.0
     # via pip-tools
 certifi==2022.12.7
     # via requests
-charset-normalizer==2.1.1
+charset-normalizer==3.0.1
     # via requests
 click==8.1.3
     # via pip-tools
@@ -24,24 +24,22 @@ gitpython==3.1.30
     # via -r requirements.in
 idna==3.4
     # via requests
-isort==5.11.4
+isort==5.12.0
     # via -r requirements.in
 jinja2==3.1.2
     # via -r requirements.in
-markupsafe==2.1.1
+markupsafe==2.1.2
     # via jinja2
 mccabe==0.7.0
     # via flake8
-packaging==22.0
+packaging==23.0
     # via
     #   build
     #   deprecation
     #   docker
-pep517==0.13.0
-    # via build
-pip-tools==6.12.1
+pip-tools==6.12.2
     # via -r requirements.in
-plotly==5.11.0
+plotly==5.13.0
     # via -r requirements.in
 psycopg2-binary==2.9.5
     # via
@@ -51,17 +49,21 @@ pycodestyle==2.10.0
     # via flake8
 pyflakes==3.0.1
     # via flake8
-python-slugify==7.0.0
+pyproject-hooks==1.0.0
+    # via build
+python-slugify==8.0.0
     # via -r requirements.in
-pytz==2022.7
+pytz==2022.7.1
     # via trino
-requests==2.28.1
+pytz-deprecation-shim==0.1.0.post0
+    # via tzlocal
+requests==2.28.2
     # via
     #   docker
     #   trino
 smmap==5.0.0
     # via gitdb
-sqlalchemy==1.4.45
+sqlalchemy==2.0.1
     # via
     #   -r requirements.in
     #   testcontainers
@@ -72,13 +74,19 @@ testcontainers[postgresql]==3.7.1
     # via -r requirements.in
 text-unidecode==1.3
     # via python-slugify
-trino[sqlalchemy]==0.320.0
+trino[sqlalchemy]==0.321.0
     # via -r requirements.in
-urllib3==1.26.13
+typing-extensions==4.4.0
+    # via sqlalchemy
+tzdata==2022.7
+    # via pytz-deprecation-shim
+tzlocal==4.2
+    # via trino
+urllib3==1.26.14
     # via
     #   docker
     #   requests
-websocket-client==1.4.2
+websocket-client==1.5.1
     # via docker
 wheel==0.38.4
     # via pip-tools
